# volatility-surface-hedging-lab

./: .gitignore  README.md  mypy.ini  pyproject.toml
.github/workflows/: ci.yml
data/: public_spy_snapshot_2020-07-05.csv
scripts/: build_public_spy_case_data.py  fetch_yahoo_option_chain.py  generate_historical_data.py  generate_sample_data.py  generate_visuals.py  run_full_study.py  run_hedging_backtest.py  run_live_snapshot_study.py  run_model_comparison.py  run_research_pipeline.py  run_rolling_recalibration.py
src/lse_fm_vol_project/: arbitrage.py  data_io.py  pipeline.py  surface.py  svi.py
src/vol_surface_hedging_lab/: __init__.py  backtest.py  black_scholes.py  data_io.py  hedging_common.py  model_comparison.py  optimisation.py  rolling.py  sabr.py  svi.py  synthetic_data.py  types.py  visualisation.py  yahoo_data.py
tests/: test_arbitrage.py  test_backtest.py  test_black_scholes.py  test_data_io.py  test_model_comparison.py  test_optimisation.py  test_pipeline_integration.py  test_rolling.py  test_sabr.py  test_surface.py  test_svi.py  test_visualisation.py  test_yahoo_data.py
