[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vol-surface-hedging-lab"
version = "0.1.0"
description = "Volatility surface and hedging research platform"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Aws Khalid" }]
dependencies = []

[project.optional-dependencies]
dev = [
  "mypy>=1.8.0",
  "pytest>=8.0.0",
  "ruff>=0.5.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
